--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <title>Indie Hub</title>
+        <link rel="stylesheet" href="css/IndieHub.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <script src="js/IndieHub.js"></script>
+    </body>
+</html>
