--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <div class="card-image"></div>
                     <div class="card-content">
                         <span class="card-tag">NOTÍCIA</span>
-                        <h3>Hollow Knight: Silksong recebe nova atualização dos desenvolvedores</h3>
-                        <p>Team Cherry finalmente compartilha novidades sobre o aguardado título</p>
+                        <h3>Silksong: DLC confirmada?</h3>
+                        <p>Team Cherry finalmente compartilha planos futuros para o jogo</p>
                         <div class="card-meta">
                             <span class="date">25 Out 2025</span>
                             <div class="card-actions">
@@ -90,8 +90,8 @@
                     <div class="card-image"></div>
                     <div class="card-content">
                         <span class="card-tag">NOTÍCIA</span>
-                        <h3>Celeste recebe DLC gratuito surpresa</h3>
-                        <p>Novo conteúdo adiciona 20 níveis desafiadores</p>
+                        <h3>Crossover entre Balatro e Vampire Survivors</h3>
+                        <p>Atualização trará grandes mudanças a ambos os jogos</p>
                         <div class="card-meta">
                             <span class="date">24 Out 2025</span>
                             <div class="card-actions">
@@ -107,8 +107,8 @@
                     <div class="card-image"></div>
                     <div class="card-content">
                         <span class="card-tag">LANÇAMENTO</span>
-                        <h3>Stardew Valley multiplataforma confirmado</h3>
-                        <p>Jogue com amigos em qualquer dispositivo</p>
+                        <h3>Stardew Valley 1.7 confirmado por desenvolvedor</h3>
+                        <p>Novos itens, áreas e nova NPC</p>
                         <div class="card-meta">
                             <span class="date">23 Out 2025</span>
                             <div class="card-actions">
@@ -124,8 +124,8 @@
                     <div class="card-image"></div>
                     <div class="card-content">
                         <span class="card-tag">NOTÍCIA</span>
-                        <h3>Indie World Showcase anuncia data</h3>
-                        <p>Evento digital revelará novos jogos indie</p>
+                        <h3>Prepare-se para a Steam Winter Sale 2025!</h3>
+                        <p>Aproveite descontos de até 90% nessa data</p>
                         <div class="card-meta">
                             <span class="date">22 Out 2025</span>
                             <div class="card-actions">
@@ -176,8 +176,8 @@
                     <div class="news-item-image"></div>
                     <div class="news-item-content">
                         <span class="card-tag">NOTÍCIA</span>
-                        <h3>Promoção de Halloween traz descontos de até 80%</h3>
-                        <p>Steam, GOG e Epic Games Store oferecem ofertas incríveis em jogos indie de terror e aventura durante o evento sazonal.</p>
+                        <h3>Festival Susteam IV traz descontos de até 80%</h3>
+                        <p>A promoção de dia das bruxas da Steam retorna com descontos incríveis</p>
                         <div class="tags">
                             <span class="tag">#promoções</span>
                             <span class="tag">#halloween</span>
@@ -239,8 +239,8 @@
                     <div class="ent-card-image"></div>
                     <div class="card-content">
                         <span class="card-tag orange">PROMOÇÃO</span>
-                        <h3>Bundle Humble com 12 jogos indie</h3>
-                        <p>Pague o quanto quiser e ajude instituições</p>
+                        <h3>Melhores jogos da Humble Bundle</h3>
+                        <p>Confira os jogos mais interessantes desta desenvolvedora</p>
                     </div>
                 </article>
             </div>
