--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indie Hub - Portal de Jogos Indie</title>
-    <link rel="stylesheet" href="css/IndieHub.css">
+    <link rel="stylesheet" href="IndieHub.css">
     <script src="https://kit.fontawesome.com/778d3033d0.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -337,6 +337,6 @@
         </div>
     </footer>
 
-    <script src="js/indiehub.js"></script>
+    <script src="indiehub.js"></script>
 </body>
 </html>
